--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
   ---------------------------------------------->
   <footer class="my-3 py-3">
     <div class="container">
-
       <div class="row">
         <div class="col-lg-12">
           <div class="wrapper border-bottom-3px">
@@ -225,7 +224,7 @@
           </div>
         </div>
       </div>
-
+    </div>
   </footer>
   <!--------------------------------------------- 
     Footer
